--- a/nethely/index.css
+++ b/nethely/index.css
@@ -1,5 +1,5 @@
 /*!
-  * Szabó Szabolcs
+  * Kocsis Gergő
   * index.css
   */
 
@@ -8,9 +8,9 @@ fakeimg {
     background: #eee;
 	}
 
-#h1
+#h1{
 text-align: center
-	
+}	
 
 
 	
